<resources>
    <string name="app_name">Registro pressões</string>
    <string name="nova_medicao">Nova medição</string>
    <string name="edicao_medicao">Edição de medição</string>
    <string name="editar_medicao">Editar</string>
    <string name="excluir_medicao">Excluir</string>
    <string name="pressa_item_valor">%s x %s</string>
    <string name="pressa_item_valor_risco">⚠️ %s x %s</string>
    <string name="formulario_pressao_maxima">Máxima *</string>
    <string name="formulario_pressao_minima">Mínima *</string>
    <string name="formulario_pressao_data">Data *</string>
    <string name="formulario_pressao_salvar">Salvar</string>
    <string name="formulario_pressao_error_data">⚠️ O campo data é obrigatório!</string>
    <string name="formulario_pressao_error_maxima">⚠️ O campo máxima é obrigatório e deve ser maior que 0!</string>
    <string name="formulario_pressao_error_minima">⚠️ O campo mínima é obrigatório e deve ser maior que 0!</string>
    <string name="activity_inserir_medicao">Inserir medição</string>
    <string name="formulario_pressao_error_falha_insercao">Falha ao inserir medição</string>
    <string name="confirm_remocao">Confirmação</string>
    <string name="confirm_remocao_accept">Sim</string>
    <string name="confirm_remocao_cancel">Não</string>
    <string name="confirm_remocao_pressao">Tem certeza que deseja excluir essa medição?</string>
    <string name="menu_lista_pressoes_importar">Importar</string>
    <string name="menu_lista_pressoes_exportar">Exportar</string>
    <string name="menu_lista_pressoes_filtrar">Filtrar</string>
    <string name="menu_lista_pressoes_filtrar_todos">Todos</string>
    <string name="menu_lista_pressoes_filtrar_importados">Importados</string>
    <string name="menu_lista_pressoes_filtrar_semana">Está semana</string>
    <string name="menu_lista_pressoes_filtrar_mes">Este mês</string>
    <string name="menu_lista_pressoes_filtrar_hoje">Hoje</string>
    <string name="card_indicadores_titulo">Resumo medições</string>
    <string name="card_indicadores_media">Média: %s x %s</string>
    <string name="card_indicadores_maxima">Máxima: %s x %s %s</string>
    <string name="card_indicadores_minima">Mínima: %s x %s %s</string>
    <string name="activity_importar_medicoes">Importar medições</string>
    <string name="formulario_importar_medicoes">Medições *</string>
    <string name="formulario_importar_error_medicoes">⚠️ O campo medições é obrigatório!</string>
    <string name="formulario_importar_medicoes_helper">Ex: 04/12 - 14:30hrs - 170x110</string>
    <string name="formulario_importar_importar">Importar</string>
    <string name="formulario_importar_error_importacao">Falha ao importar medições</string>
    <string name="exportar_exportar">Exportar para área de transferência</string>
    <string name="exportar_copiar">Copiar</string>
    <string name="exportar_texto_buscando">Buscando informações…</string>
    <string name="exportar_texto_encontrado">Medições encontradas</string>
    <string name="exportar_message_copiado">Copiado para área de transferência</string>
</resources>