<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_lista_pressoes_filtrar"
        android:icon="@drawable/ic_action_filter_off"
        android:title="@string/menu_lista_pressoes_filtrar"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_lista_pressoes_filtrar_hoje"
                android:title="@string/menu_lista_pressoes_filtrar_hoje"
                />
            <item
                android:id="@+id/menu_lista_pressoes_filtrar_semana"
                android:title="@string/menu_lista_pressoes_filtrar_semana"
                />
            <item
                android:id="@+id/menu_lista_pressoes_filtrar_mes"
                android:title="@string/menu_lista_pressoes_filtrar_mes"
                />
            <item
                android:id="@+id/menu_lista_pressoes_filtrar_todos"
                android:title="@string/menu_lista_pressoes_filtrar_todos"
                />
        </menu>
    </item>
</menu>