<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.FormularioImportarMedicoesActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_importar_medicoes_textinputlayout_texto"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:helperText="@string/formulario_importar_medicoes_helper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_importar_medicoes_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/formulario_importar_medicoes"
                android:inputType="textMultiLine"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/activity_formulario_importar_medicoes_botao_salvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/formulario_importar_importar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formulario_importar_medicoes_textinputlayout_texto"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>