<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.FormularioPressaoActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_pressao_textinputlayout_data"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_pressao_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/formulario_pressao_data"
                android:focusable="false"
                android:inputType="datetime"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_pressao_textinputlayout_maxima"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formulario_pressao_textinputlayout_data">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_pressao_produto_maxima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/formulario_pressao_maxima"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_pressao_textinputlayout_minima"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formulario_pressao_textinputlayout_maxima">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_pressao_produto_minima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/formulario_pressao_minima"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/activity_formulario_pressao_botao_salvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/formulario_pressao_salvar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formulario_pressao_textinputlayout_minima"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>